# minecraft

./: .envrc  .gitignore  Makefile  README.md  infra.tf  state_storage.tf  todo.md
_modules/files-change/: files-change.tf
cdn/: cdn.tf
mcserver/: autoscale.tf  lambda.tf  user_data.sh.tpl
mcserver/lambda/: lifecycle_handler.py
portal/: .envrc  config-overrides.js  package-lock.json  package.json  portal.tf
portal/public/: index.html  manifest.json
portal/src/: config.js  index.css  index.js
portal/src/authentication/: actions.js  operations.js  selectors.js  state.js
portal/src/components/: App.js  Copyable.css  Copyable.js  Dashboard.css  Dashboard.js  NavBar.css  NavBar.js  ServerStatus.css  ServerStatus.js  Slider.css  Slider.js  StateIndicator.css  StateIndicator.js  Toast.css  Toast.js
portal/src/service/: actions.js  operations.js  selectors.js  state.js
portal/src/state/: store.js
portal/src/toast/: actions.js  operations.js  selectors.js  state.js
portal/src/utils/: state.js  timeout.js
portal/src/views/: App.js  Copyable.js  Dashboard.js  NavBar.js  Toast.js
service/: .envrc  .gitignore  app.py  app_router.py  auth_middleware.py  cors_middleware.py  error_middleware.py  event_log_middleware.py  json_middleware.py  package-lock.json  package.json  pyproject.toml  router.py  server_resource.py  serverless.yml  service.tf
